[tool.poetry]
name = "fastapi-users-starter"
version = "0.1.0"
description = ""
authors = ["Just van den Broecke <just@justobjects.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.70.0"
fastapi-users = {version = "8.1.1", extras = ["sqlalchemy"]}
databases = {extras = ["sqlite"], version = "^0.5.3"}
alembic = "1.7.4"
uvicorn = "0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
